# vscode-ext-serve-run-wasm

./: .gitignore  Cargo.toml  README.md  esbuild.config.mjs  esbuild.test-electron.config.mjs  package-lock.json  package.json  tsconfig.json
.codesandbox/: tasks.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/cli/.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  labeler.yml  release.yml
.github/workflows/: publish.yml  scope-label.yml  sem-pr-label.yml  test.yaml  test_client.yml
scripts/: build-rel-client.sh  init-labels.sh  ver-tag.sh
src/client/src/: lib.rs  main.rs  ndjson.rs
src/client/test/scripts/: pipe.mjs  srv.mjs  test_cli.sh  util.mjs
src/extension/: extension.ts
src/extension/lib/: args.ts  config.ts  handleRun.ts  ipcHandlePath.ts  ipcServer.ts  query.ts  stdio.ts
src/extension/test/suite/: extension.test.ts  index.ts
src/extension/test/unit/lib/: handleRun.test.ts  ipcHandlePath.test.ts  query.test.ts  stdio.test.ts
wasm/: Cargo.toml
wasm/src/: main.rs
