[package]
name = "crw"
version = "0.1.5"
edition = "2021"

[lib]
name = "crw"
path = "src/client/src/lib.rs"

[[bin]]
name = "crw"
path = "src/client/src/main.rs"

[dependencies]
async-stream = "0.3.5"
clap = { version = "4.5.0", features = ["derive"] }
futures-core = "0.3.30"
futures-util = "0.3.30"
hyper = { version = "0.14.28", features = ["stream"] }
hyperlocal = "0.8.0"
is-terminal = "0.4.12"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = [
    "rt",
    "macros",
    "io-std",
    "rt-multi-thread",
    "sync",
    "io-util",
] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.10", features = ["io"] }
url = "2.5.0"
