[package]
name = "crw"
version = "0.1.6"
edition = "2021"

[lib]
name = "crw"
path = "src/client/src/lib.rs"

[[bin]]
name = "crw"
path = "src/client/src/main.rs"

[dependencies]
async-stream = "0.3.5"
clap = { version = "4.5.13", features = ["derive"] }
futures-core = "0.3.30"
futures-util = "0.3.30"
hyper = { version = "0.14.30", features = ["stream"] }
hyperlocal = "0.8.0"
is-terminal = "0.4.12"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = [
    "rt",
    "macros",
    "io-std",
    "rt-multi-thread",
    "sync",
    "io-util",
] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["io"] }
url = "2.5.2"
